--- a/grave_finder_app/res/layout-large-land/main.xml
+++ b/grave_finder_app/res/layout-large-land/main.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content_fragment_placeholder"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:orientation="horizontal" >
+    android:layout_height="match_parent" >
 
-    <fragment
-        android:id="@+id/search_form_fragment"
-        android:name="pl.itiner.grave.GFormFragment"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/content_fragment_placeholder"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
 
-    <fragment
-        android:id="@+id/result_list_fragment"
-        android:name="pl.itiner.grave.ResultList"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        <fragment
+            android:id="@+id/search_form_fragment"
+            android:name="pl.itiner.grave.GFormFragment"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
-</LinearLayout>
+        <View
+            android:layout_width="5dp"
+            android:layout_height="match_parent"
+            android:background="@color/spacer_background" />
+
+        <fragment
+            android:id="@+id/result_list_fragment"
+            android:name="pl.itiner.grave.ResultList"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <include layout="@layout/footer" />
+
+</RelativeLayout>
