--- a/grave_finder_app/res/layout/main.xml
+++ b/grave_finder_app/res/layout/main.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content_fragment_placeholder"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
-    <fragment
-        android:id="@+id/search_form_fragment"
-        android:name="pl.itiner.grave.GFormFragment"
+    <LinearLayout
+        android:id="@+id/content_fragment_placeholder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-    <fragment
-        android:id="@+id/result_list_fragment"
-        android:name="pl.itiner.grave.ResultList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <fragment
+            android:id="@+id/search_form_fragment"
+            android:name="pl.itiner.grave.GFormFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-</LinearLayout>
+        <fragment
+            android:id="@+id/result_list_fragment"
+            android:name="pl.itiner.grave.ResultList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <include layout="@layout/footer" />
+
+</RelativeLayout>
