--- a/grave_finder_app/res/layout-large-land/list.xml
+++ b/grave_finder_app/res/layout-large-land/list.xml
@@ -8,7 +8,8 @@
         android:id="@+id/list_offline_warninig_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="gone" >
 
         <TextView
             style="@style/list_text"
@@ -17,7 +18,7 @@
             android:padding="5dp"
             android:text="@string/list_offline_warning"
             android:textColor="@color/red"
-            android:visibility="gone" />
+             />
 
         <View
             android:layout_width="match_parent"
